objects/DMAPP__Dealmaker_Activity_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use this field to add additional fields to CRUD/search screens for an activity. The field name must match the Salesforce field name, not the label.</description>
    <fields>
        <fullName>DMAPP__API_Field_Name__c</fullName>
        <description>Use this field to add additional fields to CRUD/search screens for an activity. The field name must match the Salesforce field name, not the label.</description>
        <inlineHelpText>Use this field to add additional fields to CRUD/search screens for an activity. The field name must match the Salesforce field name, not the label.</inlineHelpText>
        <label>API Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__CRUDLayout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRUDLayout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__SearchLayout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SearchLayout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Searchable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Searchable</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealmaker Activity Field</label>
</CustomObject>